--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -305,6 +305,9 @@ Alonso-Ovalle, Luis. 2000. Is the `Arbitrary Interpretation' a Semantic Epipheno
 \section*{\large{\textbf{Papers Presented at Conferences and Published
       in Proceedings}}}
       
+      
+ Royer, Justin, and Luis Alonso-Ovalle. 2019. Randon Choice Modality in Chuj: The Case of \textit{Komon}. \textit{Proceedings of Form and Analysis in Mayan Linguistics 5 (FAMLi 5)}, ed. by Ryan Bennett, Robert Henderson, Pedro Mateo Pedro, and Megan Harve, \href{https://escholarship.org/uc/item/5587h7df}{https://escholarship.org/uc/item/5587h7df}
+      
        Alonso-Ovalle, Luis, and Aron Hirsch. 2018. Keep \textit{Only} Strong. \textit{Proceedings of the Twenty-Eighth Semantics and Linguistic Theory Conference}, ed. by Sireemas Maspong, Brynhildur Stef\'ansd\'ottir, Katherine Blake and Forrest Davis, CLC Publications, pp. 251-270.
        
  Alonso-Ovalle, Luis, and Henrison Hsieh. 2018. Overcoming the Unexpected: The Tagalog Ability/Involuntary Action Form.  \textit{Proceedings of the Thirty-Fifth West Coast Conference on Formal Linguistics}, ed. by Will Bennett, Lindsay Hracs, and Dennis Storoshenko, Somerville, MA: Cascadilla Proceedings Project.      
