--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -597,14 +597,14 @@ December 2004.``Equal Rights for Every Disjunct! Quantification over Alternative
 \subsection*{Conference Presentations}
 
 
-\subsubsection*{\hspace{5pt} Papers Delivered}}
+\subsubsection*{\hspace{5pt} Papers Delivered}
 
 December 2018, ``Number Inflection, Spanish Bare Interrogatives, and Higher-Order Quantification'' (with Vincent Rouillard), \textit{Going Romance}, University of Utrecht, December 12, 2018 [presented by co-author.]
 
 October 2018, ``Number Inflection, Spanish Bare Interrogatives, and Higher-Order Quantification'' (with Vincent Rouillard), \textit{49th
   Meeting of the North East Linguistic Society}, Cornell University, October 6 2018.
 
-September 2018, ``Contradiction-Free Strengthening and Alternative Discharge: Farsi \textit{i}-Indefinites'' (with Esmail Moghiseh), \text{Sinn und Bedeutung 23}, Centre de Ling\"{u}\'istica Te\`orica, Universitat Aut\`onoma de Barcelona, September 6, 2018.
+September 2018, ``Contradiction-Free Strengthening and Alternative Discharge: Farsi \textit{i}-Indefinites'' (with Esmail Moghiseh), \textit{Sinn und Bedeutung 23}, Centre de Ling\"{u}\'istica Te\`orica, Universitat Aut\`onoma de Barcelona, September 6, 2018.
  
  March 2018, ``Strong \textit{Only}'' (with Aron Hirsch), \textit{Semantics 2018: Looking Ahead}, University of Massachusetts at Amherst, March 10, 2018.
  
@@ -707,7 +707,7 @@ October 2002. ``Two Types of Indefinites'' (with Paula Men\'endez-Benito), \text
 
 \subsubsection*{\hspace{5pt} Poster Presentations}
 
-October 2018. Luis Alonso-Ovalle and Esmail Moghiseh, ``Neutralizing Free Choice items via domain restriction: Farsi \textit{-i} indefinites'', \textit{12th Toronto-Ottawa-Montreal Workshop in Semantics}, Narch 30, 2019, Concordia University, Montreal.
+October 2018. Luis Alonso-Ovalle and Esmail Moghiseh, ``Neutralizing Free Choice items via domain restriction: Farsi \textit{-i} indefinites'', \textit{12th Toronto-Ottawa-Montreal Workshop in Semantics}, March 30, 2019, Concordia University, Montreal.
 
 August 2018. Justin Royer and Luis Alonso-Ovalle, ``La expresi\'on de la modalidad de decisi\'on arbitraria en Chuj'', \textit{Form and Analysis in Mayan Linguistics 5}, August 10-11, 2018, Antigua. Guatemala, Centro de Formaci\'on de la Cooperaci\'on Espa\~nola en Antigua, Guatemala [presented by co-author.]
 
