--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -96,29 +96,25 @@ M.A., 2001   & Hispanic Linguistics, University of Massachusetts at Amherst\\
 \section*{Professional Experience}
 
 \begin{tabular}{p{2.815cm}p{280pt}}
-August 2016 -- & Associate Professor and Chair\\
- & Department of Linguistics\\
+August 2016 -- & Associate Professor and Chair, Department of Linguistics\\
  &McGill University\\
  & \\
  \end{tabular}
 
  \begin{tabular}{p{2.815cm}p{280pt}}
-August 2015 -- & Associate Professor\\
- & Department of Linguistics\\
+August 2015 -- & Associate Professor, Department of Linguistics\\
  & McGill University\\
  & \\
  \end{tabular}
   \begin{tabular}{p{2.815cm}p{280pt}}
 June 2014 -- &  Associate Professor\\
-July 2015 & Department of Linguistics \\
-& Department of Languages, Literatures, and Cultures\\ 
+July 2015 & Department of Linguistics and Department of Languages, Literatures, and Cultures\\ 
 & McGill University\\
  \end{tabular}
   \begin{tabular}{p{2.815cm}p{280pt}}
 & \\[-8pt]
 August 2011 -- &  Assistant Professor\\
-May 2014& Department of Linguistics \\
-& Department of Languages, Literatures, and Cultures\\ 
+May 2014& Department of Linguistics and Department of Languages, Literatures, and Cultures\\ 
 & McGill University\\
 & \\[-8pt]
 \end{tabular}
