--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -515,10 +515,12 @@ Alonso-Ovalle, Luis. (ed.) 2003. \emph{On Semantic Processing, University of Mas
 
 \subsection*{Invited Talks}
 
+April 2019. ``Keep \textit{Only} Strong'', (with Aron Hirsch), Department of Linguistics Colloquium, University of Maryland, April 26, 2019.
+
 April 2017. ``Against the Odds. On the Modal Component of the Ability/Involuntary Action Verbal Inflection in Tagalog'', (with Henrison Hsieh), Tenth Toronto-Montr\'eal-Ottawa Semantics Workshop, University of
 Toronto, April 22, 2017.
 
-April 2017. ``Epistemic indefinites, again'', (with Paula Men\'endez-Benito), Department of English Linguistics, University of G\"{o}ttingen, [presented by co-author.]
+April 2017. ``Epistemic Indefinites, Again'', (with Paula Men\'endez-Benito), Department of English Linguistics, University of G\"{o}ttingen, [presented by co-author.]
 
 February 2017. ``Modal Anchors and Modal Indefinites: Spanish \textit{Uno Cualquiera}'', (with Paula Men\'endez-Benito), University of Cologne, Institut f\"ur deutsche Sprache und Literatur, [presented by co-author.]
 
